--- a/Chirp.CLI.csproj
+++ b/Chirp.CLI.csproj
@@ -11,5 +11,10 @@
     <PackageReference Include="CsvHelper" Version="33.0.1" />
     <PackageReference Include="docopt.net" Version="0.8.1" />
   </ItemGroup>
+
+  <PropertyGroup>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo> 
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo> 
+  </PropertyGroup>
   
 </Project>
