--- a/src/Chirp.CLI.Client/Chirp.CLI.Client.csproj
+++ b/src/Chirp.CLI.Client/Chirp.CLI.Client.csproj
@@ -5,16 +5,12 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="33.0.1" />
-    <PackageReference Include="docopt.net" Version="0.8.1" />
+    <ProjectReference Include="../Chirp.CSVDB/Chirp.CSVDB.csproj" />
   </ItemGroup>
-
-  <PropertyGroup>
-    <GenerateAssemblyInfo>false</GenerateAssemblyInfo> 
-    <GenerateAssemblyInfo>false</GenerateAssemblyInfo> 
-  </PropertyGroup>
   
 </Project>
