--- a/test/Chirp.CLI.Client.Test/E2ETest/E2ETest.csproj
+++ b/test/Chirp.CLI.Client.Test/E2ETest/E2ETest.csproj
@@ -22,4 +22,9 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\src\Chirp.CLI.Client\Chirp.CLI.Client.csproj" />
+    <ProjectReference Include="..\..\..\src\Chirp.CSVDB\Chirp.CSVDB.csproj" />
+  </ItemGroup>
+
 </Project>
