--- a/test/Chirp.CLI.Client.Test/IntTest/IntTest.csproj
+++ b/test/Chirp.CLI.Client.Test/IntTest/IntTest.csproj
@@ -22,4 +22,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\src\Chirp.CLI.Client\Chirp.CLI.Client.csproj" />
+  </ItemGroup>
+
 </Project>
