--- a/test/Chirp.CSVDB.Test/IntTest/IntTest.csproj
+++ b/test/Chirp.CSVDB.Test/IntTest/IntTest.csproj
@@ -22,4 +22,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\src\Chirp.CSVDB\Chirp.CSVDB.csproj" />
+  </ItemGroup>
+
 </Project>
