--- a/src/Chirp.CLI.Client/Chirp.CLI.Client.csproj
+++ b/src/Chirp.CLI.Client/Chirp.CLI.Client.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="coverlet.collector" Version="6.0.2">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="CsvHelper" Version="33.0.1" />
     <ProjectReference Include="../Chirp.CSVDB/Chirp.CSVDB.csproj" />
   </ItemGroup>
