--- a/test/Chirp.CLI.Client.Test/UnitTest/UnitTest.csproj
+++ b/test/Chirp.CLI.Client.Test/UnitTest/UnitTest.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="./src/Chirp.CLI.Client/Chirp.CLI.Client.csproj" />
+    <ProjectReference Include="../../../src/Chirp.CLI.Client/Chirp.CLI.Client.csproj" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.1" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
