--- a/.github/workflows/main_bdsagroup13chirpremotedb.yml
+++ b/.github/workflows/main_bdsagroup13chirpremotedb.yml
@@ -61,5 +61,4 @@ jobs:
         with:
           app-name: 'bdsagroup13chirpremotedb'
           slot-name: 'Production'
-          package: .
-          
+          package: ${{env.DOTNET_ROOT}}/myapp
