--- a/src/Chirp.Razor/appsettings.json
+++ b/src/Chirp.Razor/appsettings.json
@@ -1,9 +1,31 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:your-sql-server-name.database.windows.net,1433;Database=your-database-name;User Id=username;Password=password;"
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Warning",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "AzureAppServices": {
+      "LogLevel": {
+        "Default": "Warning"
+      }
     }
   },
-  "AllowedHosts": "*"
+  "Kestrel": {
+    "Endpoints": {
+      "Https": {
+        "Url": "https://*:443"
+      }
+    },
+    "RedirectToHttps": true
+  },
+  "ApplicationInsights": {
+    "InstrumentationKey": "YOUR-INSTRUMENTATION-KEY"
+  },
+  "AllowedHosts": "*",
+  "HealthCheck": {
+    "HealthEndpoint": "/health"
+  }
 }
