--- a/src/Chirp.Razor/appsettings.json
+++ b/src/Chirp.Razor/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:your-sql-server-name.database.windows.net,1433;Database=your-database-name;User Id=username;Password=password;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning",
