added http 5000 in appsetting

--- a/src/Chirp.Razor/appsettings.json
+++ b/src/Chirp.Razor/appsettings.json
@@ -15,6 +15,9 @@
   },
   "Kestrel": {
     "Endpoints": {
+      "Http": {
+        "Url": "https://*:8080"
+      },
       "Https": {
         "Url": "https://*:443"
       }
