--- a/src/Chirp.Razor/appsettings.json
+++ b/src/Chirp.Razor/appsettings.json
@@ -1,34 +1,9 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:your-sql-server-name.database.windows.net,1433;Database=your-database-name;User Id=username;Password=password;"
-  },
   "Logging": {
     "LogLevel": {
-      "Default": "Warning",
+      "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
-    },
-    "AzureAppServices": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
     }
   },
-  "Kestrel": {
-    "Endpoints": {
-      "Http": {
-        "Url": "https://*:8080"
-      },
-      "Https": {
-        "Url": "https://*:443"
-      }
-    },
-    "RedirectToHttps": true
-  },
-  "ApplicationInsights": {
-    "InstrumentationKey": "YOUR-INSTRUMENTATION-KEY"
-  },
-  "AllowedHosts": "*",
-  "HealthCheck": {
-    "HealthEndpoint": "/health"
-  }
+  "AllowedHosts": "*"
 }
