--- a/src/Chirp.Razor/Chirp.Razor.csproj
+++ b/src/Chirp.Razor/Chirp.Razor.csproj
@@ -1,5 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
+
+  <ItemGroup>
+    <ProjectReference Include="../Chirp.CLI.Client/Chirp.CLI.Client.csproj" />
+    <ProjectReference Include="../Chirp.CSVDBService/Chirp.CSVDBService.csproj" />
+  </ItemGroup>
+
+
   <PropertyGroup>
     <TargetFramework>net$(NETCoreAppMaximumVersion)</TargetFramework>
     <Nullable>enable</Nullable>
