updated executables yaml

--- a/.github/workflows/executables.yaml
+++ b/.github/workflows/executables.yaml
@@ -3,40 +3,36 @@ name: Build and Release C# Executables
 on:
   push:
     tags:
-      - 'v*.*.*'  # Triggers workflow when a version tag is pushed (e.g., v1.0.0)
+      - 'v*.*.*'  # Triggers on version tags like v1.0.0, v2.0.1, etc.
 
 jobs:
   build:
-    runs-on: ubuntu-latest  # Use Ubuntu runner for .NET
+    runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]  # Build for multiple platforms
+        os: [ubuntu-latest, windows-latest, macos-latest]  # Build on multiple platforms
 
     steps:
-      # Checkout the repository
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Setup .NET SDK
       - name: Setup .NET SDK
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: '8.x'  # Use the version of .NET you're targeting
+          dotnet-version: '7.x'
 
-      # Restore dependencies
       - name: Restore dependencies
         run: dotnet restore
 
-      # Build the project (for all platforms)
-      - name: Build
+      - name: Build project
         run: dotnet publish --configuration Release --output ./build/${{ matrix.os }} --self-contained --runtime ${{ matrix.os == 'ubuntu-latest' && 'linux-x64' || matrix.os == 'windows-latest' && 'win-x64' || 'osx-x64' }}
-      
+
       # Upload the built executables as artifacts
       - name: Upload build artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: executables-${{ matrix.os }}
+          name: executables-${{ matrix.os }}  # Artifact name based on OS
           path: ./build/${{ matrix.os }}
 
   release:
@@ -44,20 +40,35 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout code again for release step
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Download artifacts from build job
-      - name: Download build artifacts
+      # Loop through OS to download the correct artifact
+      - name: Download build artifacts (Linux)
         uses: actions/download-artifact@v3
         with:
-          name: executables-${{ matrix.os }}
+          name: executables-ubuntu-latest
+          path: ./build/linux
+
+      - name: Download build artifacts (Windows)
+        uses: actions/download-artifact@v3
+        with:
+          name: executables-windows-latest
+          path: ./build/windows
+
+      - name: Download build artifacts (macOS)
+        uses: actions/download-artifact@v3
+        with:
+          name: executables-macos-latest
+          path: ./build/macos
 
       # Create a GitHub release and upload the executables
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
         with:
-          files: ./build/${{ matrix.os }}/*
+          files: |
+            ./build/linux/*
+            ./build/windows/*
+            ./build/macos/*
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
