--- a/.github/workflows/executables.yaml
+++ b/.github/workflows/executables.yaml
@@ -16,7 +16,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
         project: 
-          - src/Chirp.Razor/Chirp.Razor.csproj
+          - ./src/Chirp.Razor/Chirp.Razor.csproj
 
     steps:
       - name: Checkout code
