changed all to  not selfcontained2

--- a/src/Chirp.CSVDBService/Chirp.CSVDBService.csproj
+++ b/src/Chirp.CSVDBService/Chirp.CSVDBService.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net$(NETCoreAppMaximumVersion)</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <SelfContained>false</SelfContained>
   </PropertyGroup>
 
   <ItemGroup>
