--- a/.github/workflows/main_bdsagroup013chirprazor.yml
+++ b/.github/workflows/main_bdsagroup013chirprazor.yml
@@ -24,9 +24,14 @@ jobs:
       - name: Build with dotnet
         run: dotnet build --configuration Release
 
+      - name: Build with dotnet
+        run: dotnet build src/Chirp.Razor/ --configuration Release
+  
       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish src/Chirp.Razor/ -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
+       
+        
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
