--- a/src/Chirp.Razor/appsettings.json
+++ b/src/Chirp.Razor/appsettings.json
@@ -1,5 +1,8 @@
 {
   "Logging": {
+    "ConnectionStrings": {
+      "DefaultConnection": "Data Source=Chat.db"
+    },
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
