--- a/.github/workflows/executables.yaml
+++ b/.github/workflows/executables.yaml
@@ -12,6 +12,11 @@ on:
       - edited     # Trigger when a release is edtied
 
 jobs:
+  steps:
+    -name: ls
+          run: 
+
+
   release:
     runs-on: ubuntu-latest
     name: Build, Test, and Release Chirp Executable
@@ -37,57 +42,17 @@ jobs:
     - name: Run tests
       run: dotnet test --configuration Release --verbosity normal
 
-    # Build for Windows (x64) and create single EXE file
-    - name: Build and Publish Single EXE for Windows (x64)
-      run: dotnet publish "src/Chirp.Razor/Chirp.Razor.csproj" -c Release -r win-x64 --self-contained false /p:PublishSingleFile=true --output ./publish/win-x64
-
-    # Build for Windows (ARM) and create single EXE file
-    - name: Build and Publish Single EXE for Windows (ARM)
-      run: dotnet publish "src/Chirp.Razor/Chirp.Razor.csproj" -c Release -r win-arm64 --self-contained false /p:PublishSingleFile=true --output ./publish/win-arm64
-
     # Build for MacOS (x64) and create single executable
     - name: Build and Publish Single Executable for MacOS (x64)
       run: dotnet publish "src/Chirp.Razor/Chirp.Razor.csproj" -c Release -r osx-x64 --self-contained false /p:PublishSingleFile=true --output ./publish/osx-x64
 
-    # Build for MacOS (ARM) and create single executable
-    - name: Build and Publish Single Executable for MacOS (ARM)
-      run: dotnet publish "src/Chirp.Razor/Chirp.Razor.csproj" -c Release -r osx-arm64 --self-contained false /p:PublishSingleFile=true --output ./publish/osx-arm64
-
-    # Build for Linux (x64) and create single executable
-    - name: Build and Publish Single Executable for Linux (x64)
-      run: dotnet publish "src/Chirp.Razor/Chirp.Razor.csproj" -c Release -r linux-x64 --self-contained false /p:PublishSingleFile=true --output ./publish/linux-x64
-
-    # Build for Linux (ARM) and create single executable
-    - name: Build and Publish Single Executable for Linux (ARM)
-      run: dotnet publish "src/Chirp.Razor/Chirp.Razor.csproj" -c Release -r linux-arm64 --self-contained false /p:PublishSingleFile=true --output ./publish/linux-arm64
-
     # Create the publish directory if it doesn't already exist
     - name: Create publish directory
       run: mkdir -p ./publish
-    
-    # Compress the EXE into a ZIP file (Windows x64)
-    - name: Compress Windows x64 EXE to ZIP
-      run: zip -j ./publish/chirp-win-x64.zip ./publish/win-x64/Chirp.Razor.exe
-
-    # Compress the EXE into a ZIP file (Windows ARM)
-    - name: Compress Windows ARM EXE to ZIP
-      run: zip -j ./publish/chirp-win-arm64.zip ./publish/win-arm64/Chirp.Razor.exe
 
     # Compress the MacOS x64 executable into a ZIP file
     - name: Compress MacOS x64 executable to ZIP
       run: zip -j ./publish/chirp-osx-x64.zip ./publish/osx-x64/Chirp.Razor
-
-    # Compress the MacOS ARM executable into a ZIP file
-    - name: Compress MacOS ARM executable to ZIP
-      run: zip -j ./publish/chirp-osx-arm64.zip ./publish/osx-arm64/Chirp.Razor
-
-    # Compress the Linux x64 executable into a ZIP file
-    - name: Compress Linux x64 executable to ZIP
-      run: zip -j ./publish/chirp-linux-x64.zip ./publish/linux-x64/Chirp.Razor
-
-    # Compress the Linux ARM executable into a ZIP file
-    - name: Compress Linux ARM executable to ZIP
-      run: zip -j ./publish/chirp-linux-arm64.zip ./publish/linux-arm64/Chirp.Razor
   
     # Create GitHub Release and attach all ZIP files
     - name: Create GitHub Release
@@ -95,11 +60,7 @@ jobs:
       uses: softprops/action-gh-release@v2
       with:
         files: |
-          ./publish/chirp-win-x64.zip
-          ./publish/chirp-win-arm64.zip
           ./publish/chirp-osx-x64.zip
-          ./publish/chirp-osx-arm64.zip
-          ./publish/chirp-linux-x64.zip
-          ./publish/chirp-linux-arm64.zip
+
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
