--- a/.github/workflows/exeexample.yaml
+++ b/.github/workflows/exeexample.yaml
@@ -1,9 +1,8 @@
 # name: Build and Release C# Executables
 
 on:
-    push:
-    pull_request:
-        branches: [ main ]
+    schedule: 
+    - cron: "0 20 * * 0"
 
 jobs:
   build:
