--- a/.github/workflows/executables.yaml
+++ b/.github/workflows/executables.yaml
@@ -49,5 +49,8 @@ jobs:
       - name: make releases
         run: dotnet publish "src/Chirp.Razor/Chirp.Razor.csproj" -c Release -r osx-x64 --self-contained false /p:PublishSingleFile=true --output ./publish/macos
 
-      - name: check dir
-        run: ls -a
+      - name: Install tree
+        run: sudo apt-get install tree
+    
+      - name: Show directory structure
+        run: tree -a
