--- a/.github/workflows/executables.yaml
+++ b/.github/workflows/executables.yaml
@@ -48,6 +48,15 @@ jobs:
       
       - name: make releases
         run: dotnet publish "src/Chirp.Razor/Chirp.Razor.csproj" -c Release -r osx-x64 --self-contained false /p:PublishSingleFile=true --output ./publish/macos
+      
+      - name: Zip the published files
+        run: zip -r ./publish/macOS/macos-x64.zip ./publish/macOS/*
+
+      - name: Upload Release Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: myapp
+          path: ./publish/macOS/myapp.zip
 
       - name: Install tree
         run: sudo apt-get install tree
