--- a/.github/workflows/executables.yaml
+++ b/.github/workflows/executables.yaml
@@ -49,6 +49,9 @@ jobs:
       - name: make releases
         run: dotnet publish "src/Chirp.Razor/Chirp.Razor.csproj" -c Release -r osx-x64 --self-contained false /p:PublishSingleFile=true --output ./publish/macos
       
+      - name: Check published files
+        run: ls -a ./publish/macOS
+
       - name: Zip the published files
         run: zip -r ./publish/macOS/macos-x64.zip ./publish/macOS/*
 
@@ -58,8 +61,8 @@ jobs:
           name: myapp
           path: ./publish/macOS/myapp.zip
 
-      - name: Install tree
-        run: sudo apt-get install tree
+#      - name: Install tree
+#        run: sudo apt-get install tree
     
-      - name: Show directory structure
-        run: tree -a
+#      - name: Show directory structure
+#        run: tree -a
