--- a/.github/workflows/executables.yaml
+++ b/.github/workflows/executables.yaml
@@ -49,8 +49,11 @@ jobs:
       - name: make releases
         run: dotnet publish "src/Chirp.Razor/Chirp.Razor.csproj" -c Release -r osx-x64 --self-contained false /p:PublishSingleFile=true --output ./publish/macos
       
-      - name: Check published files
-        run: ls -a ./publish/macos
+      - name: Install tree
+        run: sudo apt-get install tree
+    
+      - name: Show directory structure
+        run: tree -a ./publish/macos
 
       - name: Zip the published files
         run: zip -r ./publish/macOS/macos-x64.zip ./publish/macOS/*
@@ -60,9 +63,3 @@ jobs:
         with:
           name: myapp
           path: ./publish/macOS/myapp.zip
-
-#      - name: Install tree
-#        run: sudo apt-get install tree
-    
-#      - name: Show directory structure
-#        run: tree -a
