--- a/.github/workflows/executables.yaml
+++ b/.github/workflows/executables.yaml
@@ -48,14 +48,14 @@ jobs:
       
       - name: make releases
         run: dotnet publish "src/Chirp.Razor/Chirp.Razor.csproj" -c Release -r osx-x64 --self-contained false /p:PublishSingleFile=true --output ./publish/macos
-    
-      - name: Show directory structure
-        run: |
-          sudo apt-get install tree
-          tree -a ./publish/macos
 
       - name: Zip the published files
         run: zip -r ./publish/macos-x64.zip ./publish/macos/*
+
+      - name: Show directory structure
+        run: |
+          sudo apt-get install tree
+          tree -a ./publish
 
       - name: Upload Release Artifact
         uses: actions/upload-artifact@v3
