--- a/.github/workflows/executables.yaml
+++ b/.github/workflows/executables.yaml
@@ -61,4 +61,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: macos-x64
-          path: ./publish/macOS/myapp.zip
+          path: ./publish/macos-x64.zip
