--- a/.github/workflows/executables.yaml
+++ b/.github/workflows/executables.yaml
@@ -48,7 +48,7 @@ jobs:
       
       - name: make releases
         run: dotnet publish "src/Chirp.Razor/Chirp.Razor.csproj" -c Release -r osx-x64 --self-contained false /p:PublishSingleFile=true --output ./publish/macos
-
+      
       - name: Zip the published files
         run: zip -r ./publish/macos-x64.zip ./publish/macos/*
 
@@ -62,3 +62,16 @@ jobs:
         with:
           name: macos-x64
           path: ./publish/macos-x64.zip
+      
+  upload:
+    runs-on: ubuntu-latest
+
+    steps:
+      # Create GitHub Release and attach all ZIP files
+      - name: Create GitHub Release
+        id: create_release
+        uses: softprops/action-gh-release@v2
+        with:
+          files:
+            ./publish/*
+
