trying making the actions sync

--- a/.github/workflows/executables.yaml
+++ b/.github/workflows/executables.yaml
@@ -73,5 +73,5 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           files:
-            ./publish/*
+            ./publish/macos-x64
 
