--- a/.github/workflows/executables.yaml
+++ b/.github/workflows/executables.yaml
@@ -71,6 +71,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Show directory structure
+        run: |
+          sudo apt-get install tree
+          tree -a ./publish
+
       - name: Release with tag
         uses: softprops/action-gh-release@v1
         with:
